packages/webkitgtk6/webkit/WebKitEnumTypes.inc

{$IFDEF read_interface}


function WEBKIT_TYPE_AUTHENTICATION_SCHEME: TGType;
function webkit_authentication_scheme_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_AUTOMATION_BROWSING_CONTEXT_PRESENTATION: TGType;
function webkit_automation_browsing_context_presentation_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_CONTEXT_MENU_ACTION: TGType;
function webkit_context_menu_action_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_COOKIE_PERSISTENT_STORAGE: TGType;
function webkit_cookie_persistent_storage_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_COOKIE_ACCEPT_POLICY: TGType;
function webkit_cookie_accept_policy_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_CREDENTIAL_PERSISTENCE: TGType;
function webkit_credential_persistence_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_EDITOR_TYPING_ATTRIBUTES: TGType;
function webkit_editor_typing_attributes_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_NETWORK_ERROR: TGType;
function webkit_network_error_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_POLICY_ERROR: TGType;
function webkit_policy_error_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_DOWNLOAD_ERROR: TGType;
function webkit_download_error_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_PRINT_ERROR: TGType;
function webkit_print_error_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_JAVASCRIPT_ERROR: TGType;
function webkit_javascript_error_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_SNAPSHOT_ERROR: TGType;
function webkit_snapshot_error_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_WEB_EXTENSION_MATCH_PATTERN_ERROR : TGType;
function webkit_web_extension_match_pattern_error_get_type:TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_USER_CONTENT_FILTER_ERROR: TGType;
function webkit_user_content_filter_error_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_MEDIA_ERROR: TGType;
function webkit_media_error_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_FAVICON_DATABASE_ERROR: TGType;
function webkit_favicon_database_error_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_FEATURE_STATUS: TGType;
function webkit_feature_status_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_FIND_OPTIONS: TGType;
function webkit_find_options_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_HIT_TEST_RESULT_CONTEXT: TGType;
function webkit_hit_test_result_context_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_INPUT_PURPOSE: TGType;
function webkit_input_purpose_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_INPUT_HINTS: TGType;
function webkit_input_hints_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_NAVIGATION_TYPE: TGType;
function webkit_navigation_type_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_NETWORK_PROXY_MODE: TGType;
function webkit_network_proxy_mode_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_PERMISSION_STATE: TGType;
function webkit_permission_state_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_PRINT_OPERATION_RESPONSE: TGType;
function webkit_print_operation_response_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_SCRIPT_DIALOG_TYPE: TGType;
function webkit_script_dialog_type_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_HARDWARE_ACCELERATION_POLICY: TGType;
function webkit_hardware_acceleration_policy_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_USER_CONTENT_INJECTED_FRAMES: TGType;
function webkit_user_content_injected_frames_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_USER_STYLE_LEVEL: TGType;
function webkit_user_style_level_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_USER_SCRIPT_INJECTION_TIME: TGType;
function webkit_user_script_injection_time_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_USER_MESSAGE_ERROR: TGType;
function webkit_user_message_error_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_CACHE_MODEL: TGType;
function webkit_cache_model_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_WEB_EXTENSION_MATCH_PATTERN_OPTIONS : TGType;
function webkit_web_extension_match_pattern_options_get_type:TGType;cdecl; external libwebkit;

function WEBKIT_TYPE_POLICY_DECISION_TYPE: TGType;
function webkit_policy_decision_type_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_LOAD_EVENT: TGType;
function webkit_load_event_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_SAVE_MODE: TGType;
function webkit_save_mode_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_INSECURE_CONTENT_EVENT: TGType;
function webkit_insecure_content_event_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_SNAPSHOT_OPTIONS: TGType;
function webkit_snapshot_options_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_SNAPSHOT_REGION: TGType;
function webkit_snapshot_region_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_WEB_PROCESS_TERMINATION_REASON: TGType;
function webkit_web_process_termination_reason_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_MEDIA_CAPTURE_STATE: TGType;
function webkit_media_capture_state_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_WEB_EXTENSION_MODE: TGType;
function webkit_web_extension_mode_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_WEBSITE_DATA_TYPES: TGType;
function webkit_website_data_types_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_TLS_ERRORS_POLICY: TGType;
function webkit_tls_errors_policy_get_type: TGType; cdecl; external libwebkit;

function WEBKIT_TYPE_AUTOPLAY_POLICY: TGType;
function webkit_autoplay_policy_get_type: TGType; cdecl; external libwebkit;


// === Konventiert am: 4-1-25 13:42:51 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}


function WEBKIT_TYPE_AUTHENTICATION_SCHEME: TGType;
begin
  WEBKIT_TYPE_AUTHENTICATION_SCHEME := webkit_authentication_scheme_get_type;
end;

function WEBKIT_TYPE_AUTOMATION_BROWSING_CONTEXT_PRESENTATION: TGType;
begin
  WEBKIT_TYPE_AUTOMATION_BROWSING_CONTEXT_PRESENTATION := webkit_automation_browsing_context_presentation_get_type;
end;

function WEBKIT_TYPE_CONTEXT_MENU_ACTION: TGType;
begin
  WEBKIT_TYPE_CONTEXT_MENU_ACTION := webkit_context_menu_action_get_type;
end;

function WEBKIT_TYPE_COOKIE_PERSISTENT_STORAGE: TGType;
begin
  WEBKIT_TYPE_COOKIE_PERSISTENT_STORAGE := webkit_cookie_persistent_storage_get_type;
end;

function WEBKIT_TYPE_COOKIE_ACCEPT_POLICY: TGType;
begin
  WEBKIT_TYPE_COOKIE_ACCEPT_POLICY := webkit_cookie_accept_policy_get_type;
end;

function WEBKIT_TYPE_CREDENTIAL_PERSISTENCE: TGType;
begin
  WEBKIT_TYPE_CREDENTIAL_PERSISTENCE := webkit_credential_persistence_get_type;
end;

function WEBKIT_TYPE_EDITOR_TYPING_ATTRIBUTES: TGType;
begin
  WEBKIT_TYPE_EDITOR_TYPING_ATTRIBUTES := webkit_editor_typing_attributes_get_type;
end;

function WEBKIT_TYPE_NETWORK_ERROR: TGType;
begin
  WEBKIT_TYPE_NETWORK_ERROR := webkit_network_error_get_type;
end;

function WEBKIT_TYPE_POLICY_ERROR: TGType;
begin
  WEBKIT_TYPE_POLICY_ERROR := webkit_policy_error_get_type;
end;

function WEBKIT_TYPE_DOWNLOAD_ERROR: TGType;
begin
  WEBKIT_TYPE_DOWNLOAD_ERROR := webkit_download_error_get_type;
end;

function WEBKIT_TYPE_PRINT_ERROR: TGType;
begin
  WEBKIT_TYPE_PRINT_ERROR := webkit_print_error_get_type;
end;

function WEBKIT_TYPE_JAVASCRIPT_ERROR: TGType;
begin
  WEBKIT_TYPE_JAVASCRIPT_ERROR := webkit_javascript_error_get_type;
end;

function WEBKIT_TYPE_SNAPSHOT_ERROR: TGType;
begin
  WEBKIT_TYPE_SNAPSHOT_ERROR := webkit_snapshot_error_get_type;
end;

function WEBKIT_TYPE_WEB_EXTENSION_MATCH_PATTERN_ERROR: TGType;
begin
  WEBKIT_TYPE_WEB_EXTENSION_MATCH_PATTERN_ERROR := webkit_web_extension_match_pattern_error_get_type;
end;

function WEBKIT_TYPE_USER_CONTENT_FILTER_ERROR: TGType;
begin
  WEBKIT_TYPE_USER_CONTENT_FILTER_ERROR := webkit_user_content_filter_error_get_type;
end;

function WEBKIT_TYPE_MEDIA_ERROR: TGType;
begin
  WEBKIT_TYPE_MEDIA_ERROR := webkit_media_error_get_type;
end;

function WEBKIT_TYPE_FAVICON_DATABASE_ERROR: TGType;
begin
  WEBKIT_TYPE_FAVICON_DATABASE_ERROR := webkit_favicon_database_error_get_type;
end;

function WEBKIT_TYPE_FEATURE_STATUS: TGType;
begin
  WEBKIT_TYPE_FEATURE_STATUS := webkit_feature_status_get_type;
end;

function WEBKIT_TYPE_FIND_OPTIONS: TGType;
begin
  WEBKIT_TYPE_FIND_OPTIONS := webkit_find_options_get_type;
end;

function WEBKIT_TYPE_HIT_TEST_RESULT_CONTEXT: TGType;
begin
  WEBKIT_TYPE_HIT_TEST_RESULT_CONTEXT := webkit_hit_test_result_context_get_type;
end;

function WEBKIT_TYPE_INPUT_PURPOSE: TGType;
begin
  WEBKIT_TYPE_INPUT_PURPOSE := webkit_input_purpose_get_type;
end;

function WEBKIT_TYPE_INPUT_HINTS: TGType;
begin
  WEBKIT_TYPE_INPUT_HINTS := webkit_input_hints_get_type;
end;

function WEBKIT_TYPE_NAVIGATION_TYPE: TGType;
begin
  WEBKIT_TYPE_NAVIGATION_TYPE := webkit_navigation_type_get_type;
end;

function WEBKIT_TYPE_NETWORK_PROXY_MODE: TGType;
begin
  WEBKIT_TYPE_NETWORK_PROXY_MODE := webkit_network_proxy_mode_get_type;
end;

function WEBKIT_TYPE_PERMISSION_STATE: TGType;
begin
  WEBKIT_TYPE_PERMISSION_STATE := webkit_permission_state_get_type;
end;

function WEBKIT_TYPE_PRINT_OPERATION_RESPONSE: TGType;
begin
  WEBKIT_TYPE_PRINT_OPERATION_RESPONSE := webkit_print_operation_response_get_type;
end;

function WEBKIT_TYPE_SCRIPT_DIALOG_TYPE: TGType;
begin
  WEBKIT_TYPE_SCRIPT_DIALOG_TYPE := webkit_script_dialog_type_get_type;
end;

function WEBKIT_TYPE_HARDWARE_ACCELERATION_POLICY: TGType;
begin
  WEBKIT_TYPE_HARDWARE_ACCELERATION_POLICY := webkit_hardware_acceleration_policy_get_type;
end;

function WEBKIT_TYPE_USER_CONTENT_INJECTED_FRAMES: TGType;
begin
  WEBKIT_TYPE_USER_CONTENT_INJECTED_FRAMES := webkit_user_content_injected_frames_get_type;
end;

function WEBKIT_TYPE_USER_STYLE_LEVEL: TGType;
begin
  WEBKIT_TYPE_USER_STYLE_LEVEL := webkit_user_style_level_get_type;
end;

function WEBKIT_TYPE_USER_SCRIPT_INJECTION_TIME: TGType;
begin
  WEBKIT_TYPE_USER_SCRIPT_INJECTION_TIME := webkit_user_script_injection_time_get_type;
end;

function WEBKIT_TYPE_USER_MESSAGE_ERROR: TGType;
begin
  WEBKIT_TYPE_USER_MESSAGE_ERROR := webkit_user_message_error_get_type;
end;

function WEBKIT_TYPE_CACHE_MODEL: TGType;
begin
  WEBKIT_TYPE_CACHE_MODEL := webkit_cache_model_get_type;
end;

function WEBKIT_TYPE_WEB_EXTENSION_MATCH_PATTERN_OPTIONS: TGType;
begin
  WEBKIT_TYPE_WEB_EXTENSION_MATCH_PATTERN_OPTIONS := webkit_web_extension_match_pattern_options_get_type;
end;

function WEBKIT_TYPE_POLICY_DECISION_TYPE: TGType;
begin
  WEBKIT_TYPE_POLICY_DECISION_TYPE := webkit_policy_decision_type_get_type;
end;

function WEBKIT_TYPE_LOAD_EVENT: TGType;
begin
  WEBKIT_TYPE_LOAD_EVENT := webkit_load_event_get_type;
end;

function WEBKIT_TYPE_SAVE_MODE: TGType;
begin
  WEBKIT_TYPE_SAVE_MODE := webkit_save_mode_get_type;
end;

function WEBKIT_TYPE_INSECURE_CONTENT_EVENT: TGType;
begin
  WEBKIT_TYPE_INSECURE_CONTENT_EVENT := webkit_insecure_content_event_get_type;
end;

function WEBKIT_TYPE_SNAPSHOT_OPTIONS: TGType;
begin
  WEBKIT_TYPE_SNAPSHOT_OPTIONS := webkit_snapshot_options_get_type;
end;

function WEBKIT_TYPE_SNAPSHOT_REGION: TGType;
begin
  WEBKIT_TYPE_SNAPSHOT_REGION := webkit_snapshot_region_get_type;
end;

function WEBKIT_TYPE_WEB_PROCESS_TERMINATION_REASON: TGType;
begin
  WEBKIT_TYPE_WEB_PROCESS_TERMINATION_REASON := webkit_web_process_termination_reason_get_type;
end;

function WEBKIT_TYPE_MEDIA_CAPTURE_STATE: TGType;
begin
  WEBKIT_TYPE_MEDIA_CAPTURE_STATE := webkit_media_capture_state_get_type;
end;

function WEBKIT_TYPE_WEB_EXTENSION_MODE: TGType;
begin
  WEBKIT_TYPE_WEB_EXTENSION_MODE := webkit_web_extension_mode_get_type;
end;

function WEBKIT_TYPE_WEBSITE_DATA_TYPES: TGType;
begin
  WEBKIT_TYPE_WEBSITE_DATA_TYPES := webkit_website_data_types_get_type;
end;

function WEBKIT_TYPE_TLS_ERRORS_POLICY: TGType;
begin
  WEBKIT_TYPE_TLS_ERRORS_POLICY := webkit_tls_errors_policy_get_type;
end;

function WEBKIT_TYPE_AUTOPLAY_POLICY: TGType;
begin
  WEBKIT_TYPE_AUTOPLAY_POLICY := webkit_autoplay_policy_get_type;
end;


{$ENDIF read_implementation}
